Org: Adds icon to date picker in calendar views to make it more obvious
This also ensures picked dates are added to the browser history

TYPE: Feature
LINK: OGC-2330

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -3169,6 +3169,10 @@ button {
             float: none;
             margin-bottom: 1rem;
             text-align: left;
+
+            &:hover .fa {
+                color: $primary-color;
+            }
         }
 
         h2 + button {
