--- a/src/onegov/town6/theme/styles/fullcalendar.scss
+++ b/src/onegov/town6/theme/styles/fullcalendar.scss
@@ -91,6 +91,10 @@
             float: none;
             margin-bottom: 1rem;
             text-align: left;
+
+            &:hover .fa {
+                color: $primary-color;
+            }
         }
 
         h2 + button {
