poliitical business participants list style

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1385,3 +1385,9 @@ code {
 p.full-text-width {
     max-width: 100% !important;
 }
+
+/* RIS */
+
+.business-participants {
+    margin-bottom: 0rem;
+}
