--- a/src/onegov/town6/theme/styles/fullcalendar.scss
+++ b/src/onegov/town6/theme/styles/fullcalendar.scss
@@ -32,6 +32,7 @@
         z-index: 2;
         padding: 2px 4px;
         border-top-right-radius: 1.2rem;
+        white-space: nowrap;
 
         &::first-line {
             font-weight: bold;
