--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -189,6 +189,9 @@ $settings-icon: '\f1de';
     .text-modules::before { @include icon('\f249'); }
     .forms::before { @include icon-bold('\f570'); }
     .surveys::before { @include icon-bold('\f681'); }
+    .citizen-login::before { @include icon-bold("\f2f6"); }
+    .citizen-tickets::before { @include icon-bold('\f3ff'); }
+    .citizen-reservations::before { @include icon('\f073'); }
 
     .with-count::before {
         border: 1px solid $primary-fg-color;
