Town6: Fix calendar view (cleaner solution)
TYPE: Bugfix
LINK: OGC-2432

--- a/src/onegov/town6/theme/styles/fullcalendar.scss
+++ b/src/onegov/town6/theme/styles/fullcalendar.scss
@@ -91,7 +91,10 @@
             display: block;
             float: none;
             margin-bottom: 1rem;
+            max-width: 0;
+            overflow: visible;
             text-align: left;
+            white-space: nowrap;
 
             &:hover .fa {
                 color: $primary-color;
