--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -4699,6 +4699,7 @@ ul.recipients {
     background-color: $white;
     display: inline-block;
     padding: 2px 8px;
+    white-space:nowrap;
 
     &.payment-state-open {
         border: 1px solid $info-color;
@@ -4736,6 +4737,16 @@ ul.recipients {
         &::before {
             @include icon('\f06a');
             color: $warning-color;
+            margin-right: .75ex;
+        }
+    }
+
+    &.payment-state-invoiced {
+        border: 1px solid get-color(info);
+
+        &::before {
+            @include icon('\f1ea');
+            color: get-color(info);
             margin-right: .75ex;
         }
     }
