--- a/src/onegov/town6/theme/styles/payment.scss
+++ b/src/onegov/town6/theme/styles/payment.scss
@@ -50,6 +50,7 @@
     background-color: $white;
     display: inline-block;
     padding: 2px 8px;
+    white-space:nowrap;
 
     &.payment-state-open {
         border: 1px solid get-color(info);
@@ -87,6 +88,16 @@
         &::before {
             @include icon-bold('\f06a');
             color: get-color(warning);
+            margin-right: .75ex;
+        }
+    }
+
+    &.payment-state-invoiced {
+        border: 1px solid get-color(info);
+
+        &::before {
+            @include icon('\f1ea');
+            color: get-color(info);
             margin-right: .75ex;
         }
     }
